2-app-deployments/nginx-webserver/3-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route 
  namespace: default
spec:
  parentRefs:
  - name: http 
    namespace: nginx-gateway
#  hostnames:
#  - "*.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-svc
      port: 80
